--- a/content/w6.html
+++ b/content/w6.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='w6.html'>w6</a><li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='First.html'>First</a><li><a href='About.html'>About</a><li><a href='w6.html'>w6</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='About.html'>Next</a> >> About<br /><h1>w6</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022<br /><h1>w6</h1>
 <p>哈囉你好嗎</p>
-<br /> <a href='About.html'>Next</a> >> About</div>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='cp2022.html'>Next</a> >> cp2022</div>
         
     <!-- footer -->
       <div class="container">
