--- a/content/Brython.html
+++ b/content/Brython.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w6.html'>w6</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w6.html'>w6</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">cp2022 << <a href='cp2022.html'>Previous</a> <br /><h1>Brython</h1>
+    <div id="tipue_search_content">cp2022H1 << <a href='cp2022H1.html'>Previous</a> <br /><h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -423,7 +423,7 @@ doc["aitetris"].bind("click", aitetris.do)
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
 <p><!-- editor2 結束 --></p>
-<hr/><br />cp2022 << <a href='cp2022.html'>Previous</a> </div>
+<hr/><br />cp2022H1 << <a href='cp2022H1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
