--- a/config/content.htm
+++ b/config/content.htm
@@ -3,12 +3,12 @@
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py">w6 rotating block</a></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/b49752d17bb373d8b4444e903c460a1e/raw/ea080310e5941c4e653b344d894b1c9858b4e2cb/Rotating%2520Block.py">test</a></p>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/6ffcc2daa0df10df43d672fd0151f109/raw/90d6e812f8706967b47d4d4452bd575a1eeafd9d/%25E6%2596%25B0.cp%25E6%258A%25BD%25E9%25BB%259E">新.cp抽點</a></p>
-<div><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/0f7b5cbf43d9319f7eb841d802867fff/raw/e9cea28b7256a42d613ad66fd6f8824e54b67dc3/%25E6%2593%25B7%25E5%258F%2596%25E5%2580%258B%25E4%25BA%25BA%25E9%259D%259C%25E6%2585%258B%25E7%25B6%25B2%25E9%25A0%2581.py" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://gist.githubusercontent.com/mdecycu/2c6323eff49b496d1bafd210f3ec9707/raw/035d6948a233beceba7a7974eef0a0a4ef9c17e9/cp2022_w6b_gen_pages_link.py">擷取個人靜態網頁</a></div>
+<div><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D" rel="noreferrer noopener" tabindex="-1" target="_blank" title="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/15b41241c5ef5b90504d49751d95c6e8/raw/6e778c2be3fc71d3c43980f1bdff8daa18fbae43/%25E6%2596%25B0.%25E6%258A%25BD5%25E5%2590%258D">個人靜態網頁執行抽5名</a></div>
 <div><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py">抽點程式與擷取個人靜態網頁程式結合</a></div>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <p></p><h1>w6</h1>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py">結合</a></p>
-<p>哈囉你好嗎</p>
+<p></p>
 <p></p>
 <h1>cp2022H1</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕 (<a href="/downloads/practice_html.txt">practice_html.txt</a> 動態頁面超文件).</p>
@@ -271,7 +271,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <hr/>
 <p>
 <script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p><h1>cp2022</h1>
+</p>
+<h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
