--- a/content/w6.html
+++ b/content/w6.html
@@ -143,9 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>w6</h1>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/Brython.html?src=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/507071d4d4a1ede10dfdfaa411a0db154ea19090/random_draw.py&amp;src2=https://gist.githubusercontent.com/hank474/8bf92c7f4686b50b1e11972cbc8362a9/raw/b1854861f8399ce7daf471638f6f183907d0e94f/list.py">結合</a></p>
-<p>哈囉你好嗎</p>
 <p></p>
-<br />About << <a href='About.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
+<p></p><br />About << <a href='About.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
       <div class="container">
