--- a/content/w11.html
+++ b/content/w11.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w5.html'>w5</a><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='溫度轉換.html'>溫度轉換</a><li><a href='cp2022H1.html'>cp2022H1</a><li><a href='cp2022.html'>cp2022</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>w11</h1>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='溫度轉換.html'>Next</a> >> 溫度轉換<br /><h1>w11</h1>
 <p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/a5af95f622379099d5d72e30d1e265a6/raw/9615223abccf2a15b29cd8c3824b38e0f5cf702f/gistfile1.txt">w11作業參考程式</a></p>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='溫度轉換.html'>Next</a> >> 溫度轉換</div>
         
     <!-- footer -->
       <div class="container">
