--- a/content/溫度轉換.html
+++ b/content/溫度轉換.html
@@ -142,8 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>溫度轉換</h1>
-<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py">w13溫度轉換程式</a></p>
-<br />w11 << <a href='w11.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/029b1f8b5d1ce03f49f3dbd274b74027b6363f00/w13temp_ex1.py">w13溫度轉換程式</a>ex1</p>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/b543dca427faafa9508ec31e8f6e1e8b/raw/cc13a508c73ea94e43dc7203930d197f9b774a9b/w13temp_ex2.py">w13溫度轉換程式</a>ex2</p><br />w11 << <a href='w11.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
       <div class="container">
