--- a/content/密碼亂數.html
+++ b/content/密碼亂數.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">作業程式 << <a href='作業程式.html'>Previous</a> <a href='參考.html'>Next</a> >> 參考<br /><h1>W11</h1>
-<br />作業程式 << <a href='作業程式.html'>Previous</a> <a href='參考.html'>Next</a> >> 參考</div>
+    <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>密碼亂數</h1>
+<p><a href="https://mdecp2022.github.io/site-hank474/content/cp2022.html?src=https://gist.githubusercontent.com/hank474/30c62a93156cde2b95f2ba0a46fe8829/raw/40bf3d979c6c7e826b9846d6cb8c77a4f345d2e8/password_generator.py">w5 passwod generator</a></p>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
