--- a/content/心得.html
+++ b/content/心得.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1<br /><h1>心得</h1>
+<p><b>労働はクソということです。</b></p>
 <br />溫度轉換 << <a href='溫度轉換.html'>Previous</a> <a href='cp2022H1.html'>Next</a> >> cp2022H1</div>
         
     <!-- footer -->
